# Ember-Engine

./: .gitmodules  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp
Ember/: CMakeLists.txt
Ember/src/: Ember.h  empch.h
Ember/src/Engine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
Ember/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Ember/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Ember/src/Engine/Renderer/: GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererContext.cpp  RendererContext.h
Ember/src/Platform/MacOS/: MacOSWindow.cpp  MacOSWindow.h
Ember/src/Platform/Vulkan/: Vulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanDebugUtils.cpp  VulkanDebugUtils.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanSwapchain.cpp  VulkanSwapchain.h
